k8syml/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-ingress-controller
  namespace: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller  # 指定serviceAccount以获得其他ns的访问权限
      containers:
        - name: traefik-ingress-controller
          image: traefik:v2.11.0
          ports:  # 端口映射到host
            - containerPort: 80
              hostPort: 80
              protocol: TCP
            - containerPort: 8080
              hostPort: 8080
              protocol: TCP
          volumeMounts:
#            - name: traefik-cert
#              mountPath: /etc/certs
#              readOnly: true
            - name: traefik-config
              mountPath: /etc/traefik/traefik.toml
              subPath: traefik.toml
            - name: traefik-config-dynamic
              mountPath: /etc/traefik/dynamic.toml
              subPath: dynamic.toml
      volumes:
#        - name: traefik-cert
#          secret:
#            secretName: traefik-cert
        - name: traefik-config
          configMap:
            name: traefik-config
        - name: traefik-config-dynamic
          configMap:
            name: traefik-config-dynamic
